Adding in strong and em

--- a/example.html
+++ b/example.html
@@ -14,6 +14,8 @@
 
   <p>Paragraphs are separated using p tags. This automatically separates them into blocks, leaving a gap in between.</p>
 
+  <p>Within a paragraph you can make text <strong>bold</strong> or <em>italic</em>. In fact it's probably bad to think of these as bold and italic - instead you should genuinely consider them as 'strong' and 'emphasised' - you can decide exactly how to display them in you css, bold and italic are just the defaults. This is an example of <em>symantic markup</em>: you're adding information as to the interpretation of certain words, rather than dictating how they should be displayed.</p>
+
   <h2>Blank lines and void tags</h2>
 
   <p>It is also possible to insert extra blank lines manually using the br tag. The br tag is a special type of tag (called a 'void tag'); you don't need a closing br tag, just un opening one.</p>
