--- a/notes.html
+++ b/notes.html
@@ -2,11 +2,11 @@
 
 ## URL
 
-URL stands for Uniform Resource Locator. It contains serveral different parts, including:
+URL stands for *Uniform Resource Locator*. It contains serveral different parts, including:
 
-- the *protocol*: e.g. http, https, ftp
-- the *host*: e.g. www.facebook.com, www.bbc.co.uk
-- the *path*: e.g. /news/local, /john.smith.95
+- the **protocol**: e.g. http, https, ftp
+- the **host**: e.g. www.facebook.com, www.bbc.co.uk
+- the **path**: e.g. /news/local, /john.smith.95
 
 ## DNS
 
