solution matches notes better

--- a/notes_solution.html
+++ b/notes_solution.html
@@ -1,69 +1,72 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
+<!-- by GK -->
 <html>
 <head>
-    <title>A bit about the internet</title>
+  <title>A bit about the internet</title>
 </head>
 
 <body>
-<h1 id='a_bit_about_the_internet'>A bit about the internet</h1>
 
-<h2 id='url'>URL</h2>
+  <h1>A bit about the internet</h1>
+  <h2>URL</h2>
 
-<p>URL stands for <em>Uniform Resource Locator</em>. It contains serveral different parts, including:</p>
+  <p>URL stands for <em>Uniform Resource Locator</em>. It contains several different parts, including:
 
-<ul>
-<li>the <strong>protocol</strong>: e.g. http, https, ftp</li>
+  <ul>
+		  <li>the <strong>protocol</strong>: e.g. http, https, ftp</li>
+		  <li>the <strong>host</strong>: e.g. <a href="http://www.facebook.com">www.facebook.com</a>,  <a href = "http://www.bbc.co.uk">www.bbc.co.uk</a></li>
+		  <li>the <strong>path</strong>: e.g. /news/local or /john.smith.95</li>
+  </ul>
+  
+  <h2>DNS</h2>
+  
+  <p>DNS stands for Domain Name System. You buy a domain name from a registrar (e.g. <a href ="http://www.123-reg.co.uk">123-reg</a>,  <a href="http://www.godaddy.com">GoDaddy</a>). They arrange for your server's IP address to be added next to the domain name on a DNS server, so that people can find your site. THis process can take a couple of days to spread out over the entire internet, as DNS servers take time to update one another using a 'gossiping' mechanism. </p>  
 
-<li>the <strong>host</strong>: e.g. <a href="http://www.facebook.com">www.facebook.com</a>, <a href="http://www.bbc.co.uk">www.bbc.co.uk</a></li>
+  <h2>Server-side vs. Client-side technologies</h2>
+  <h3>Client-side</h3>
 
-<li>the <strong>path</strong>: e.g. /news/local, /john.smith.95</li>
-</ul>
+  <p>Client side technologies run in your web browser (e.g. Firefox, Google Chrome, or Internet Explorer). The three main client-side technologies are:</p>
+  <ol>
+		  <li>HTML</li>
+		  <li>CSS</li>
+		  <li>Javascript</li>
+  </ol>
 
-<h2 id='dns'>DNS</h2>
+  <h3>Server-side</h3>
 
-<p>DNS stands for Domain Name System. You buy a domain name from a registrar (e.g. <a href="http://www.123-reg.co.uk/">123-reg</a>, <a href="http://uk.godaddy.com/">GoDaddy</a>). They arrange for your server&#8217;s IP address to be added next to the domain name on a DNS server, so that people can find your site. This process can take a couple of days to spread out over the entire internet, as DNS servers take time to update one another using a &#8216;gossiping&#8217; mechanism.</p>
+  <p>Server-side technologies run on the server. There are many more possibilities here.</p>
 
-<h2 id='serverside_vs_clientside_technologies'>Server-side vs. Client-side technologies</h2>
-
-<h3 id='clientside'>Client-side</h3>
-
-<p>Client-side technologies run in your web browser (e.g Firefox, Google Chrome or Internet Explorer). The three main client-side technologies are:</p>
-
-<ol>
-<li>HTML</li>
-
-<li>CSS</li>
-
-<li>Javascript</li>
-</ol>
-
-<h3 id='serverside'>Server-side</h3>
-
-<p>Server-side technologies run on the server. There are many more possibilities here.</p>
-
-<table>
+  <table class='table'>
     <thead>
-        <tr><th>Technology</th><th>Description</th></tr>
+			<tr>
+					<th>Technology</th>
+					<th>Description</th>
+			</tr>
     </thead>
-    <tbody>
-        <tr>
-            <td>Ruby on Rails</td>
-            <td>A web development framework built on the Ruby programming language.</td>
-        </tr>
-        <tr>
-            <td>Node.js</td>
-            <td>A web development framework built using javascript.</td>
-        </tr>
-        <tr>
-            <td>MySQL</td>
-            <td>A common open-source database.</td>
-        </tr>
-        <tr>
-            <td>php</td>
-            <td>A programming language used for the majority of dynamic sites in the early 2000s</td>
-        </td>
-    </tbody>
-</table>
+	<tbody>
+    	<tr>
+				<td>Ruby on Rails</td>
+				<td>A web development framework built on the Ruby programming language.</td>
+		</tr>
+		<tr>
+				<td>Node.js</td>
+				<td>A web development framework built using javascript.</td>
+		</tr>
+		<tr>
+				<td>MySQL</td>
+				<td>A common open-source database.</td>
+		</tr>
+		<tr>
+				<td>php</td>
+				<td>A programming language used for the majority of dynamic sites in the early 2000s </td>
+		</tr>
+	<tbody>
+  </table>
 
-<p>Here&#8217;s a picture of a server:</p> <img src="http://4.bp.blogspot.com/-HC2Z0-z1xX8/T0DoGxfqoUI/AAAAAAAAAXM/67dXAbEckj0/s320/server10trays_640.jpg">
-</body></html>
+  <p> Here's a picture of a server: </p>
+
+  <img alt = "a server" src = "http://4.bp.blogspot.com/-HC2Z0-z1xX8/T0DoGxfqoUI/AAAAAAAAAXM/67dXAbEckj0/s320/server10trays_640.jpg">
+
+</body>
+</html>
+
