--- a/notes.html
+++ b/notes.html
@@ -16,7 +16,7 @@ DNS stands for Domain Name System. You buy a domain name from a registrar (e.g. 
 
 ### Client-side 
 
-Client-side technologies run in your web browser (e.g Firefox, Google Chrome or Internet Explorer). The three main client-side technologies are:
+Client-side technologies run in your web browser (e.g Firefox, Google Chrome or Internet Explorer) and it can easily hackable. The three main client-side technologies are:
 
 1. HTML
 2. CSS
@@ -24,7 +24,7 @@ Client-side technologies run in your web browser (e.g Firefox, Google Chrome or 
 
 ### Server-side
 
-Server-side technologies run on the server. There are many more possibilities here.
+Server-side technologies run on the server and it can't be easily hackable. There are many more possibilities here.
 
 Technology			Description
 Ruby on Rails		A web development framework built on the Ruby programming language.
