Added Complete Form for filling your Full Details.
Added Complete Form for filling your Full Details i.e. Form that takes your full details and sends it to the server.

--- a/example.html
+++ b/example.html
@@ -78,6 +78,38 @@
       <td>Hertford</td>
     </tr>
   </table>
+  
+  
+  <h2>Your Detail Form</h2>
+  <form action="Server.php">
+    <fieldset>
+        <legend>Personal Details</legend>
+        First name:<br>
+        <input type="text" name="First Name" placeholder="Fname"  value=""><br>
+        Last Name:<br>
+        <input type="text" name="Last Name" placeholder="LName"     value=""><br>
+        <input type="submit" value="Submit"><br>
+        Gender:<br>
+        <input type="radio" value="Male">Male<br>
+        <input type="radio" value="Male" checked>Female<br>
+        <input type="radio" value="Male">Others<br>
+        Choose Options:<br>
+        <input type="checkbox" name="" id="">Option 1<br>
+        <input type="checkbox" name="Checkboxes" checked>Option 2<br>
+        <input type="checkbox" name="Checkboxes" id="">Option 3<br><br>
+        <label for="carSelect">Choose Your favourite Car:</label><br>
+        <select name="Cars" id="carSelect">
+            <option value="Mercedes">Mercedes</option>
+            <option value="Audi" selected>Audi</option>
+            <option value="Volvo">Volvo</option>
+            <option value="TATA">TATA</option>
+            <option value="Hyundai">Hyundai</option>
+        </select>
+
+    </fieldset>
+</form>
+<button>Submit Button</button>
+<br>
 
 
 
